--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html ng-app="shoppingCartDemoApp" ng-strict-di>
+<html ng-app="schibstedCodeTest" ng-strict-di>
 <head>
-	<title>Angular Shopping Cart Demo</title>
+	<title>Schibsted Code Test</title>
 	<!-- build:css({.tmp,.}) app.css -->
 	<link href="bundle.css" rel='stylesheet' type='text/css'>
 	<!-- endbuild -->
@@ -13,31 +13,6 @@
 	</style>
 </head>
 <body ng-cloak>
-
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#/catalog">Shopping Cart demo</a>
-			</div>
-
-			<div>
-				<ul class="nav navbar-nav">
-					<li><a href="#/catalog">Catalog</a></li>
-					<li><a href="#/cart">
-						Cart
-						<scd-cart-getter name="cart"></scd-cart-getter>
-						<span ng-show="cart.totalItems">
-							({{cart.totalItems}})
-						</span>
-						</a>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="https://github.com/drpicox/angular-shopping-cart-demo" target="_blank">Github</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
 
 	<div class="container">
 		<ng-view autoscroll></ng-view>
